<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tugas"
    android:background="@color/lightgreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="33dp"
            android:src="@drawable/logo_cp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tugas"
            android:paddingLeft="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tugas_belum_selesai"
            android:fontFamily="@font/montserrat_bold"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/purple"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tugas_selesai"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_horizontal"
            android:textColor="@color/purple"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:background="@drawable/button3"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/plus_white"
                android:background="@drawable/button1"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>