<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PopUpTugas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/label1"
        android:paddingRight="22dp"
        android:paddingLeft="22dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/nama_mata_kuliah"
            android:textColor="@color/purple"
            android:fontFamily="@font/montserrat_bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/nama_matkul_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama_matkul_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:paddingLeft="15dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/purple"
                android:background="@drawable/button2"
                android:inputType="text"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenggat_waktu"
            android:textColor="@color/purple"
            android:fontFamily="@font/montserrat_bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTenggatWaktu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTenggatWaktu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dataTenggatWaktu"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/purple"
                        android:background="@drawable/button2"
                        android:enabled="false"
                        android:inputType="text" />
                </androidx.cardview.widget.CardView>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/calendarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/layoutTenggatWaktu"
                android:layout_centerVertical="true"
                android:src="@drawable/calendar"
                android:padding="8dp"
                android:clickable="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_tugas"
            android:textColor="@color/purple"
            android:fontFamily="@font/montserrat_bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/deskripsi_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deskripsi_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:paddingLeft="15dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/purple"
                android:background="@drawable/button2"
                android:inputType="text"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>